fixed comments text wrap

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,7 @@
+body {
+  background: lightBlue;
+}
+
 .App {
   text-align: center;
 }
